# deepfake-detector

./: .gitignore  README.md  config.py  main.py  requirements.txt  setup.cfg
.claude/: settings.local.json
detector/: notify.py  orchestrator.py
detector/audio/: __init__.py  capture.py  model.py  vad.py
detector/video/: __init__.py  face_extractor.py  frame_sampler.py  model.py
scripts/: convert_mesonet_keras.py  download_models.py  finetune_efficientnet.py  install_system_deps.sh  list_audio_devices.py  train_audio_lcnn.py
