[metadata]
name = deepfake-detector
version = 0.1.0
description = Real-time deepfake detector for video and audio calls
python_requires = >=3.10

[options]
packages = find:
install_requires =
    torch>=2.0.0
    torchvision>=0.15.0
    timm>=0.9.0
    mediapipe>=0.10.0
    opencv-python>=4.8.0
    sounddevice>=0.4.6
    numpy>=1.24.0
    librosa>=0.10.0
    webrtcvad>=2.0.10
    mss>=9.0.1
    plyer>=2.1.0
    tqdm>=4.65.0
    requests>=2.31.0
    Pillow>=10.0.0
    scipy>=1.11.0
    huggingface_hub>=0.19.0
